syntax = "proto3";

import "AbilitySyncStateInfo.proto";
import "AnimatorParameterValueInfoPair.proto";
import "EntityClientExtraInfo.proto";
import "EntityRendererChangedInfo.proto";
import "SceneEntityAiInfo.proto";
import "Vector.proto";

option java_package = "org.sorapointa.proto";

message EntityAuthorityInfo {
  AbilitySyncStateInfo ability_info = 1;
  EntityRendererChangedInfo renderer_changed_info = 2;
  SceneEntityAiInfo ai_info = 3;
  Vector born_pos = 4;
  repeated AnimatorParameterValueInfoPair pose_para_list = 5;
  EntityClientExtraInfo client_extra_info = 6;
}
