syntax = "proto3";

import "AbilitySyncStateInfo.proto";

option java_package = "org.sorapointa.proto";

message MPLevelEntityInfo {
  AbilitySyncStateInfo ability_info = 15;
  uint32 entity_id = 10;
  uint32 authority_peer_id = 5;
}
