syntax = "proto3";

import "ServantInfo.proto";
import "Vector.proto";

option java_package = "org.sorapointa.proto";

message SceneEntityAiInfo {
  bool is_ai_open = 1;
  Vector born_pos = 2;
  map<uint32, uint32> skill_cd_map = 3;
  ServantInfo servant_info = 4;
  map<uint32, uint32> ai_threat_map = 5;
  map<uint32, uint32> skill_group_cd_map = 6;
  uint32 cur_tactic = 7;
}
